--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>BB Fitness Crew</title>
 
     <style>
         body {
@@ -144,7 +144,7 @@
 
     </div>
     <div class="footer-main">
-        <p>© 2026 My Website. All rights reserved.</p>
+        <p>© 2026 BB Fitness Crew. All rights reserved.</p>
         <p>Made with &#10084 by Gaurav Thorve</p>
     </div>
 
