--- a/templates/myapp/home.html
+++ b/templates/myapp/home.html
@@ -2,7 +2,17 @@
 {% load static %}
 
 
+<style>
+        img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+    }
 
+</style>
+
+<body>
 {% block content%}
 <img src="{% static 'myapp/images/home.png' %}" alt="Home" style="width:1350px;">
 {% endblock %}
+</body>
