--- a/templates/base.html
+++ b/templates/base.html
@@ -6,19 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BB Fitness Crew</title>
 
-    <script>
-        const toggle = document.getElementById("menu-toggle");
-        const navLinks = document.getElementById("nav-links");
-
-        toggle.addEventListener("click", () => {
-            navLinks.classList.toggle("active");
-        });
-    </script>
-
 </head>
 
 <style>
-
     img {
         max-width: 100%;
         height: auto;
@@ -75,7 +65,7 @@
         background-color: rgb(14, 5, 143);
     }
 
-    
+
     .menu-toggle {
         display: none;
         font-size: 28px;
@@ -177,10 +167,10 @@
         <div class="logo">
             <a href="{% url 'home' %}">BB Fitness Crew &#128170</a>
         </div>
-        <div class="menu-toggle" id="menu-toggle">
+        <div class="menu-toggle" onclick="toggleMenu()">
             ☰
         </div>
-        <div class="nav-links">
+        <div class="nav-links" id="navLinks">
             <a href="{% url 'tryus' %}">Try Us</a>
             <a href="{% url 'contact' %}">Join Us</a>
             <a href="{% url 'pt' %}">Personal Training</a>
@@ -234,6 +224,20 @@
         <p>© 2026 BB Fitness Crew. All rights reserved.</p>
         <p>Made with &#10084 by Gaurav Thorve</p>
     </div>
+
+    <script>
+
+        function toggleMenu() {
+            var nav = document.getElementById("navLinks");
+            nav.classList.toggle("active");
+        }
+    </script>
+    </script>
+
+
+
+
+
 
 </body>
 
